--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -13,3 +13,9 @@ $govuk-global-styles: true;
 @import "components/cookie-banner";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
+
+//Cheats - ignore me
+
+.visually-hidden {visibility: hidden;}
+
+//Actual code - take with a pinch of salt, its a ptype y'all
