--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,8 +1,9 @@
 
 {% extends "layout.html" %}
 
+
 {% block pageTitle %}
-  GOV.UK Prototype Kit
+  Data Collections Transformation Prototype
 {% endblock %}
 
 {% block content %}
@@ -10,34 +11,40 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        The GOV.UK Prototype Kit
-        <span class="govuk-caption-xl">{{releaseVersion}}</span>
-      </h1>{{releaseVersion | log }}
+        Data Collections Transformation        
+      </h1>
       <p>
-        This kit lets you rapidly create HTML prototypes of GOV.UK services.
+        Please do not enter any personal information. This prototype is not secure.
       </p>
 
-      <p>
-        It contains all you need to prototype anything from simple static pages to complex, data-driven transactions.
-      </p>
+     <table class="govuk-table">
+  <caption class="govuk-table__caption visually-hidden">List of versions</caption>
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="col">Version</th>
+		<th class="govuk-table__header" scope="col">Updates</th>
+      <th class="govuk-table__header" scope="col" colspan="2">Contents</th>
+    </tr>
+  </thead>
+  <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">9.0.0</th>
+		<td class="govuk-table__cell "><ul class="govuk-list govuk-list--bullet">
+			<p>We:</p>
+  <li>updated the content</li>
+  <li>split out error and submission pages</li>
+  <li>used the new design system</li>
+</ul></td>
+      <td class="govuk-table__cell "><a href="9-0-0/contents.html">Contents</a></td>
+		 <td class="govuk-table__cell "><a href="./9-0-0/start.html">
+  Start now
+</a></td>
+    </tr>
+   
+  </tbody>
+</table>
 
-      <h2 class="govuk-heading-m">About this page</h2>
-
-      <p>We recommend you add links to your prototype to this page, rather than delete it.
-        You'll find this page in the kit at '/app/views/index.html'.</p>
-
-      <p>You can change the service name by editing the file '/app/config.js'.</p>
-
-      <h2 class="govuk-heading-m">Examples and documentation</h2>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <li><a href="/docs/tutorials-and-examples">Example pages and documentation</a></li>
-        <li>
-          <a href="https://design-system.service.gov.uk">
-            GOV.UK Design System
-          </a>
-        </li>
-      </ul>
+      
     </div>
 </div>
 
