--- a/app/views/9-0-0/contents.html
+++ b/app/views/9-0-0/contents.html
@@ -19,7 +19,7 @@
 		<h2 class="govuk-heading-l">Normal User Journey (Happy Path)</h2>
 		
 <ul class="govuk-list govuk-list--number">
-	<li><a href="./startpage.html">Start page</a></li>
+	<li><a href="./start.html">Start page</a></li>
   <li><a href="./idams.html">IDAMS</a></li>
    <li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
 	<li><a href="what_data_do_you_want_to_submit_error.html">What data do you want to submit? (Error state)</a></li>
