--- a/app/views/9-0-0/contents.html
+++ b/app/views/9-0-0/contents.html
@@ -19,15 +19,20 @@
 		<h2 class="govuk-heading-l">Normal User Journey (Happy Path)</h2>
 		
 <ul class="govuk-list govuk-list--number">
-	<li><a href="./start.html">Start page</a></li>
-  <li><a href="./idams.html">IDAMS</a></li>
+	<li><a href="start.html">Start page</a></li>
+  <li><a href="idams.html">IDAMS</a></li>
    <li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
-	<li><a href="what_data_do_you_want_to_submit_error.html">What data do you want to submit? (Error state)</a></li>
+	<li><a href="choose_file_to_upload.html">Choose file to upload</a></li>
 </ul>
-
-
-
-      
+		
+		<h2 class="govuk-heading-l">Error states and fails</h2>
+		
+<ul class="govuk-list govuk-list--number">	
+	<li><a href="what_data_do_you_want_to_submit_error.html">What data do you want to submit? (Error state)</a></li>
+	<li><a href="choose_file_to_upload_error_1.html">Choose file to upload (Error state 1)</a></li>
+	<li><a href="choose_file_to_upload_error_2.html">Choose file to upload (Error state 2)</a></li>
+	<li><a href="upload_file_failed.html">File upload failed</a></li>
+</ul>      
     </div>
 </div>
 
