--- a/app/views/9-0-0/problem_with_the_service.html
+++ b/app/views/9-0-0/problem_with_the_service.html
@@ -10,9 +10,9 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-		<h1 class="govuk-heading-xl">Sorry, your file upload failed</h1>
+		<h1 class="govuk-heading-xl">Sorry, there’s a problem with the service</h1>
 
-		<p>Your data has not been saved.</p> 
+		<p>Try again later.</p> 
 
 		<p>You will need to <a href="choose_file_to_upload.html">upload your data again</a>.</p>
 		<p>If you continue to have problems, contact the ESFA Service Desk for help and support.</p>
