--- a/app/views/9-0-0/what_data_do_you_want_to_submit_error.html
+++ b/app/views/9-0-0/what_data_do_you_want_to_submit_error.html
@@ -55,6 +55,12 @@
        European Social Fund (ESF) supplementary data
       </label>
       </div>
+		 <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="what-to-submit-4" name="whattosubmit" type="radio" value="fc">
+        <label class="govuk-label govuk-radios__label" for="what-to-submit-4">
+      Funding claim
+      </label>
+      </div>
     </div>	 
   </fieldset>			 
 </div>
