--- a/app/views/9-0-0/what_data_do_you_want_to_submit.html
+++ b/app/views/9-0-0/what_data_do_you_want_to_submit.html
@@ -11,7 +11,8 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 		
-		<div class="govuk-form-group">
+		<form action="./choose_file_to_upload.html" method="get" class="form">
+			<div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
@@ -20,36 +21,37 @@
     </legend>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-1" name="whattosubmit" type="radio"  value="ilr">
+        <input class="govuk-radios__input" id="what-to-submit-1" name="whattosubmit" type="radio"  value="ilr" >
         <label class="govuk-label govuk-radios__label" for="what-to-submit-1">
         Individualised learner records (ILR) 
       </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-2" name="whattosubmit" type="radio" value="eas">
+        <input class="govuk-radios__input" id="what-to-submit-2" name="whattosubmit" type="radio" value="eas" disabled>
         <label class="govuk-label govuk-radios__label" for="what-to-submit-2">
         Earnings Adjustment statements (EAS) 
       </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf">
+        <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf" disabled>
         <label class="govuk-label govuk-radios__label" for="what-to-submit-3">
        European Social Fund (ESF) supplementary data
       </label>
       </div>
 		 <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-4" name="whattosubmit" type="radio" value="fc">
+        <input class="govuk-radios__input" id="what-to-submit-4" name="whattosubmit" type="radio" value="fc" disabled>
         <label class="govuk-label govuk-radios__label" for="what-to-submit-4">
       Funding claim
       </label>
       </div>
     </div>	 
-  </fieldset>			 
-</div>
+  </fieldset>	 
+			</div>
 <button type="submit" class="govuk-button">
   Continue
 </button>
-
+			
+		</form>
     </div>
 	  <div class="govuk-grid-column-one-third">
         {% include "./includes/sidebar_help.html" %}
