--- a/app/views/9-0-0/what_data_do_you_want_to_submit_error.html
+++ b/app/views/9-0-0/what_data_do_you_want_to_submit_error.html
@@ -10,7 +10,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-		<form>
+	
 		<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
   <h2 class="govuk-error-summary__title" id="error-summary-title">
     There are errors on this page that need your attention
@@ -23,7 +23,7 @@
     </ul>
   </div>
 </div>
-		
+		<form action="./choose_file_to_upload.html" method="get" class="form">
 		<div class="govuk-form-group govuk-form-group--error">
 		
   <fieldset class="govuk-fieldset">
@@ -38,25 +38,25 @@
 	  
     <div class="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-1" name="whattosubmit" type="radio" value="ILR">
+        <input class="govuk-radios__input" id="what-to-submit-1" name="whattosubmit" type="radio" value="ilr">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-1">
         Individualised learner records (ILR) 
       </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-2" name="whattosubmit" type="radio" value="EAS">
+        <input class="govuk-radios__input" id="what-to-submit-2" name="whattosubmit" type="radio" value="eas" disabled>
         <label class="govuk-label govuk-radios__label" for="what-to-submit-2">
         Earnings Adjustment statements (EAS) 
       </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="ESF">
+        <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf" disabled>
         <label class="govuk-label govuk-radios__label" for="what-to-submit-3">
        European Social Fund (ESF) supplementary data
       </label>
       </div>
 		 <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-4" name="whattosubmit" type="radio" value="fc">
+        <input class="govuk-radios__input" id="what-to-submit-4" name="whattosubmit" type="radio" value="fc" disabled>
         <label class="govuk-label govuk-radios__label" for="what-to-submit-4">
       Funding claim
       </label>
