--- a/app/views/9-0-0/contents.html
+++ b/app/views/9-0-0/contents.html
@@ -23,6 +23,7 @@
   <li><a href="idams.html">IDAMS</a></li>
    <li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
 	<li><a href="choose_file_to_upload.html">Choose file to upload</a></li>
+	<li><a href="your_files_uploading.html">Your file's uploading (wip)</a></li>
 	<li><a href="theres_a_problem.html">There's a problem</a></li>
 	<li><a href="no_problems_found.html">No problems found</a></li>
 	<li><a href="submit_data.html">Submit data</a></li>
