--- a/app/views/9-0-0/contents.html
+++ b/app/views/9-0-0/contents.html
@@ -28,6 +28,7 @@
 	<li><a href="no_problems_found.html">No problems found</a></li>
 	<li><a href="submit_data.html">Submit data</a></li>
 	<li><a href="ilr_data_submitted.html">ILR data submitted</a></li>
+	<li><a href="return-period.html">Return period</a></li>
 </ul>
 		
 		<h2 class="govuk-heading-l">Error states and fails</h2>
