--- a/app/views/9-0-0/submit_data_error_1.html
+++ b/app/views/9-0-0/submit_data_error_1.html
@@ -68,7 +68,7 @@
   </fieldset>
 </div>
 
-		<a href="./ilr_file_submitted.html" type="submit" class="govuk-button">
+		<a href="./ilr_data_submitted.html" type="submit" class="govuk-button">
  Submit file
 </a>
 		<p><a href="./choose_file_to_upload.html">Go back and upload a different file</a></p>
