--- a/app/views/9-0-0/contents.html
+++ b/app/views/9-0-0/contents.html
@@ -1,5 +1,5 @@
 
-{% extends "layout.html" %}
+{% extends "layout_noback.html" %}
 
 
 {% block pageTitle %}
@@ -10,6 +10,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+		
       <h1 class="govuk-heading-xl">
         Contents        
       </h1>
