--- a/app/views/9-0-0/layout.html
+++ b/app/views/9-0-0/layout.html
@@ -48,6 +48,7 @@
   },
   html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
 }) }}
+<a href="#" onclick="goBack()" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% if useAutoStoreData %}
