--- a/app/views/9-0-0/contents.html
+++ b/app/views/9-0-0/contents.html
@@ -40,7 +40,7 @@
 	<li><a href="choose_file_to_upload_error_2.html">Choose file to upload (error state 2)</a></li>
 	<li><a href="upload_file_failed.html">File upload failed</a></li>
 	<li><a href="submit_data_error_1.html">Submit data (error state 1)</a></li>
-	<li><a href="submit_data_error_2.html">Submit data (error state 2)</a></li>
+	<!--<li><a href="submit_data_error_2.html">Submit data (error state 2)</a></li>-->
 	
 </ul> 
 		
