--- a/app/views/9-0-0/ilr_data_submitted.html
+++ b/app/views/9-0-0/ilr_data_submitted.html
@@ -12,18 +12,16 @@
     <div class="govuk-grid-column-two-thirds">
 		<div class="govuk-panel govuk-panel--confirmation">
           <h2 class="govuk-panel__title">
-            ILR File Submitted
+            R06 ILR file submitted
           </h2>
           <div class="govuk-panel__body">
-			  Return Period 6 (R06)
+			  Reference: 123456789
            
           </div>
-        </div>
-
-<p>Reference number: <span class="govuk-!-font-weight-bold">123456789</span></p>		
-<p>File name: <span class="govuk-!-font-weight-bold">myfile.xml</span></p>
+        </div>		
+<p>File name: <span class="govuk-!-font-weight-bold">ILR-file-submission-March-2018.xml</span></p>
 <p>Submitted by: <span class="govuk-!-font-weight-bold">Norma Jones</span></p>
-<p>Time: <span class="govuk-!-font-weight-bold">4 July 2018 at 3:13pm</span></p> 
+<p>At: <span class="govuk-!-font-weight-bold">3:13pm on Wednesday 4 July 2018</span></p> 
 
 <h3 class="govuk-heading-m">What happens next?</h3>
 		<p>We’ll process your file - this will take about 30 minutes. Once it’s done you’ll be able to:</p>
