--- a/app/views/9-0-0/includes/sidebar_start.html
+++ b/app/views/9-0-0/includes/sidebar_start.html
@@ -2,10 +2,12 @@
           <h2 class="govuk-heading-m" id="subsection-title">
             Help and support
           </h2>
-			<p>Email the ESFA Support Desk: <a href="sde.servicedesk@education.gov.uk">sde.servicedesk@education.gov.uk</a>
-</p>
-			<p>Or call 0370 267 0001. Lines are open Monday to Thursday, 8:30am to 5:00pm or Friday, 8:30am to 4:00pm
-</p>
+			<p><span class="govuk-!-font-weight-bold">ESFA support desk</span></p>
+	<p>Telephone: 0370 267 0001<br/>
+	<p>Monday to Thursday, 8:30am to 5:00pm<br/>
+	<p>Friday, 8:30am to 4:00pm<br/>
+	<p><a href="#">Find out about call charges</a></p>
+	<p>Email:  <a href="sde.servicedesk@education.gov.uk">sde.servicedesk@education.gov.uk</a></p>
 			 <h2 class="govuk-heading-m" id="subsection-title">
            Related content
           </h2>
