--- a/app/views/9-0-0/submit_data.html
+++ b/app/views/9-0-0/submit_data.html
@@ -10,8 +10,8 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-		<h1 class="govuk-heading-xl">Submit data</h1>
-		<p>You are about to submit the following Return Period 6 (R06) ILR file:</p>
+		<h1 class="govuk-heading-xl">Submit data <span class="govuk-caption-xl">Return Period 6 (R06)</span></h1>
+		<p>You are about to submit:</p>
 
 		<p><span class="govuk-!-font-weight-bold">File:</span> = ILR-file-submission-March-2018.xml</p>
 
@@ -29,18 +29,18 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="how-contacted-conditional-1" name="how-contacted" type="radio" value="email" data-aria-controls="conditional-how-contacted-conditional-1">
         <label class="govuk-label govuk-radios__label" for="how-contacted-conditional-1">
-        Yes, send me updates
+        Yes, send updates to joe.smith@college.ac.uk
       </label>
       </div>
-      <div class="govuk-radios__conditional" id="conditional-how-contacted-conditional-1">
+      <!--<div class="govuk-radios__conditional" id="conditional-how-contacted-conditional-1">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-email">
     Email address
   </label>
-          <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="text">
+          <input class="govuk-input govuk-!-width-two-thirds" id="contact-by-email" name="contact-by-email" type="text" value="joe.smith@college.ac.uk">
         </div>
 
-      </div>
+      </div>-->
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="how-contacted-conditional-2" name="how-contacted" type="radio" value="phone" data-aria-controls="conditional-how-contacted-conditional-2">
         <label class="govuk-label govuk-radios__label" for="how-contacted-conditional-2">
