--- a/app/views/9-0-0/submit_data_error_1.html
+++ b/app/views/9-0-0/submit_data_error_1.html
@@ -23,8 +23,9 @@
     </ul>
   </div>
 </div>
-		<h1 class="govuk-heading-xl">Submit data</h1>
-		<p>You are about to submit the following Return Period 6 (R06) ILR file:</p>
+		<h1 class="govuk-heading-xl">Submit data <span class="govuk-caption-xl">Return Period 6 (R06)</span></h1>
+		<p>You are about to submit:</p>
+
 
 		<p><span class="govuk-!-font-weight-bold">File:</span> = ILR-file-submission-March-2018.xml</p>
 
@@ -44,10 +45,10 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="how-contacted-conditional-1" name="how-contacted" type="radio" value="email" data-aria-controls="conditional-how-contacted-conditional-1">
         <label class="govuk-label govuk-radios__label" for="how-contacted-conditional-1">
-        Yes, send me updates
+        Yes, send updates to joe.smith@college.ac.uk
       </label>
       </div>
-      <div class="govuk-radios__conditional" id="conditional-how-contacted-conditional-1">
+      <!--<div class="govuk-radios__conditional" id="conditional-how-contacted-conditional-1">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-email">
     Email address
@@ -55,7 +56,7 @@
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="text">
         </div>
 
-      </div>
+      </div>-->
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="how-contacted-conditional-2" name="how-contacted" type="radio" value="phone" data-aria-controls="conditional-how-contacted-conditional-2">
         <label class="govuk-label govuk-radios__label" for="how-contacted-conditional-2">
