--- a/app/views/9-0-0/choose_file_to_upload.html
+++ b/app/views/9-0-0/choose_file_to_upload.html
@@ -10,14 +10,13 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds"> 
-		<h1 class="govuk-heading-xl">Choose file to upload</h1>
-		<p>You are about to upload a file for Return Period 6 (R06).</p>
-
+		<h1 class="govuk-heading-xl">Choose file to upload <span class="govuk-caption-xl">Return Period 6 (R06)</span></h1>
+		
 		<p>Before uploading your file you should make sure that:</p>
 		<ul class="govuk-list govuk-list--bullet">
 <li>it’s in an XML or Zip format</li>
 			<li>the data it contains is as complete as possible</li>
-			<li>the data it contains is as accurate as possible.</li>
+			<li>the data it contains is as accurate as possible</li>
 		</ul>
 		  <div class="govuk-form-group">
   <label class="govuk-label govuk-!-font-weight-bold" for="file-upload-1">
