--- a/app/views/9-0-0/what_data_do_you_want_to_submit_error.html
+++ b/app/views/9-0-0/what_data_do_you_want_to_submit_error.html
@@ -29,7 +29,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-         What data do you want to submit? 
+         What do you want to submit? 
       </h1>
 		 <span id="submit-error" class="govuk-error-message">
     Choose an option from the list
@@ -40,19 +40,19 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-1" name="whattosubmit" type="radio" value="ilr">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-1">
-        Individualised learner records (ILR) 
+        ILR (Individualised Learner Records) 
       </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-2" name="whattosubmit" type="radio" value="eas" disabled>
         <label class="govuk-label govuk-radios__label" for="what-to-submit-2">
-        Earnings Adjustment statements (EAS) 
+        EAS (Earnings Adjustment Statements)  
       </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf" disabled>
         <label class="govuk-label govuk-radios__label" for="what-to-submit-3">
-       European Social Fund (ESF) supplementary data
+       ESF (European Social Fund) supplementary data
       </label>
       </div>
 		 <div class="govuk-radios__item">
