--- a/app/views/9-0-0/start.html
+++ b/app/views/9-0-0/start.html
@@ -11,7 +11,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        Submit Learner Data      
+        Submit learner data      
       </h1>    
 
 		<p class="govuk-body-l">This service is for training providers that receive funding directly from the Education and Skills Funding Agency.</p>
