--- a/app/views/9-0-0/includes/sidebar_help_related.html
+++ b/app/views/9-0-0/includes/sidebar_help_related.html
@@ -4,9 +4,9 @@
           </h2>
 	<p><span class="govuk-!-font-weight-bold">ESFA support desk</span></p>
 	<p>Telephone: 0370 267 0001<br/>
-	<p>Monday to Thursday, 8:30am to 5:00pm<br/>
-	<p>Friday, 8:30am to 4:00pm<br/>
-	<p><a href="#">Find out about call charges</a></p>
+	Monday to Thursday, 8:30am to 5:00pm<br/>
+	Friday, 8:30am to 4:00pm<br/>
+	<a href="#">Find out about call charges</a></p>
 	<p>Email:  <a href="sde.servicedesk@education.gov.uk">sde.servicedesk@education.gov.uk</a></p>
 			 <h2 class="govuk-heading-m" id="subsection-title">
            Related content
