--- a/app/views/9-0-0/submit_data_error_1.html
+++ b/app/views/9-0-0/submit_data_error_1.html
@@ -27,9 +27,10 @@
 		<p>You are about to submit:</p>
 
 
-		<p><span class="govuk-!-font-weight-bold">File:</span> = ILR-file-submission-March-2018.xml</p>
+				<p><span class="govuk-!-font-weight-bold">File:</span> ILR-file-submission-March-2018.xml</p>
 
-		<p><span class="govuk-!-font-weight-bold">Name</span> = March Final Update</p>
+		<p><span class="govuk-!-font-weight-bold">File name:</span> March Final Update</p>
+
 
 		<div class="govuk-form-group govuk-form-group--error">
   <fieldset class="govuk-fieldset">
