--- a/app/views/9-0-0/submit_data_error_2.html
+++ b/app/views/9-0-0/submit_data_error_2.html
@@ -26,9 +26,10 @@
 		<h1 class="govuk-heading-xl">Submit data</h1>
 		<p>You are about to submit the following Return Period 6 (R06) ILR file:</p>
 
-		<p><span class="govuk-!-font-weight-bold">File:</span> = ILR-file-submission-March-2018.xml</p>
+				<p><span class="govuk-!-font-weight-bold">File:</span> ILR-file-submission-March-2018.xml</p>
 
-		<p><span class="govuk-!-font-weight-bold">Name</span> = March Final Update</p>
+		<p><span class="govuk-!-font-weight-bold">File name:</span> March Final Update</p>
+
 
 		<div class="govuk-form-group govuk-form-group--error">
   <fieldset class="govuk-fieldset">
