--- a/app/views/9-0-0/submit_data.html
+++ b/app/views/9-0-0/submit_data.html
@@ -13,9 +13,9 @@
 		<h1 class="govuk-heading-xl">Submit data <span class="govuk-caption-xl">Return Period 6 (R06)</span></h1>
 		<p>You are about to submit:</p>
 
-		<p><span class="govuk-!-font-weight-bold">File:</span> = ILR-file-submission-March-2018.xml</p>
+		<p><span class="govuk-!-font-weight-bold">File:</span> ILR-file-submission-March-2018.xml</p>
 
-		<p><span class="govuk-!-font-weight-bold">Name</span> = March Final Update</p>
+		<p><span class="govuk-!-font-weight-bold">File name:</span> March Final Update</p>
 
 		<div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
