--- a/app/views/9-0-0/ilr_data_submitted.html
+++ b/app/views/9-0-0/ilr_data_submitted.html
@@ -32,7 +32,7 @@
 		<p>When we’ve finished processing your file we’ll send an email to:</p>
 
 <div class="govuk-inset-text">
-  ilr_team@college.ac.uk
+  joe.smith@college.ac.uk
 
 </div>
 		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a>.</p>
