--- a/app/views/9-0-0/includes/sidebar_help_related.html
+++ b/app/views/9-0-0/includes/sidebar_help_related.html
@@ -22,6 +22,11 @@
                 <a href="https://www.gov.uk/education/data-collection-for-further-education-providers">
                   ILR specification, validation and funding rules  
                 </a>
+              </li>
+				<li>
+                <a href="https://www.gov.uk/government/publications/ilr-data-check-that-it-meets-standards-and-quality-requirements">
+                  ILR data: check that it meets standards and quality requirements 
+                </a>
               </li>  
             </ul>
           </nav>
