--- a/app/views/9-0-0/start.html
+++ b/app/views/9-0-0/start.html
@@ -21,6 +21,7 @@
 			<li>Individualised learner records (ILR)</li> 
 			<li>Earnings Adjustment statements (EAS)</li> 
 			<li>European Social Fund (ESF) supplementary data</li>
+			<li>Funding claims</li>
 		</ul>
 
 		<p>You can also view and download reports for data you’ve submitted.</p>
