--- a/app/views/9-0-0/contents.html
+++ b/app/views/9-0-0/contents.html
@@ -27,7 +27,7 @@
 	<li><a href="your_files_uploading.html">Your file's uploading (wip)</a></li>
 	<li><a href="theres_a_problem.html">There's a problem</a></li>
 	<li><a href="no_problems_found.html">No problems found</a></li>
-	<li><a href="submit_data.html">Submit data</a></li>
+	<li><a href="submit_data.html">Submit data</a> - removed mid sprint from the journey</li>
 	<li><a href="ilr_data_submitted.html">ILR data submitted</a></li>
 	<li><a href="return-period.html">Return period</a></li>
 </ul>
