--- a/app/views/9-0-0/ilr_data_submitted.html
+++ b/app/views/9-0-0/ilr_data_submitted.html
@@ -19,22 +19,15 @@
            
           </div>
         </div>		
-<p>File name: <span class="govuk-!-font-weight-bold">ILR-file-submission-March-2018.xml</span></p>
+<p>File: <span class="govuk-!-font-weight-bold">ILR-file-submission-March-2018.xml</span></p>
+		<p>File name: <span class="govuk-!-font-weight-bold">March Final Update</span></p>
 <p>Submitted by: <span class="govuk-!-font-weight-bold">Norma Jones</span></p>
 <p>At: <span class="govuk-!-font-weight-bold">3:13pm on Wednesday 4 July 2018</span></p> 
 
 <h3 class="govuk-heading-m">What happens next?</h3>
-		<p>We’ll process your file - this will take about 30 minutes. Once it’s done you’ll be able to:</p>
-		<ul class="govuk-list govuk-list--bullet">
-			<li>View the funding breakdown for R06</li>
-			<li>Download related reports</li>
-		</ul>
-		<p>When we’ve finished processing your file we’ll send an email to:</p>
-
-<div class="govuk-inset-text">
-  joe.smith@college.ac.uk
-
-</div>
+		<p>We’ve sent an email to joe.smith@college.ac.uk to confirm we’ve received your file.</p>
+		<p>We will email you again to let you know when your funding breakdown for R06 and related reports are ready to view. This usually takes about 30 minutes.</p>
+		<p><a href="./return-period.html">View return reports</a>.</p>
 		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a>.</p>
     </div>
 	  <div class="govuk-grid-column-one-third">
