--- a/app/views/9-0-0/no_problems_found.html
+++ b/app/views/9-0-0/no_problems_found.html
@@ -18,11 +18,13 @@
 
 		<p><span class="govuk-!-font-weight-bold">Total warnings</span> = 0</p>
 
-		<p><a href="#">Download the ILR submission rule violation summary report</a> (PDF, 375KB) for more details.
+		<p><a href="#">Download summary report </a> (PDF, 375KB).
+</p>
+		<p><a href="#">Download the ILR rule violation summary report </a> (CSV, 78KB).
 </p>
 
-		<a href="./submit_data.html" type="submit" class="govuk-button">
- Continue
+		<a href="./ilr_data_submitted.html" type="submit" class="govuk-button">
+ Submit anyway
 </a>
 		<p><a href="./choose_file_to_upload.html">Go back and upload a different file</a></p>
     </div>
