--- a/app/views/9-0-0/return-period.html
+++ b/app/views/9-0-0/return-period.html
@@ -30,39 +30,39 @@
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="col">Category</th>
-      <th class="govuk-table__header" scope="col">Amount</th>
+      <th class="govuk-table__header govuk-table__header--numeric" scope="col">Amount</th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">16-19 (excluding Apprenticeships)</th>
-      <td class="govuk-table__cell ">£2,469</td>
+      <td class="govuk-table__cell govuk-table__cell--numeric ">£2,469</td>
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Other 16-19</th>
-      <td class="govuk-table__cell ">£4,508</td>
+      <td class="govuk-table__cell govuk-table__cell--numeric">£4,508</td>
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Adult skills</th>
-      <td class="govuk-table__cell ">£1,342</td>
+      <td class="govuk-table__cell govuk-table__cell--numeric">£1,342</td>
     </tr>
 	   <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Community Learning</th>
-      <td class="govuk-table__cell ">£429</td>
+      <td class="govuk-table__cell govuk-table__cell--numeric">£429</td>
     </tr>
 	   <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">ESF</th>
-      <td class="govuk-table__cell ">£268</td>
+      <td class="govuk-table__cell govuk-table__cell--numeric">£268</td>
     </tr>
 	   <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Other Adult</th>
-      <td class="govuk-table__cell ">£0</td>
+      <td class="govuk-table__cell govuk-table__cell--numeric">£0</td>
     </tr>
 	   <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Apprenticeships from 1 May 2017
 (or available for non-funded learning aims)
 </th>
-      <td class="govuk-table__cell ">£1,717</td>
+      <td class="govuk-table__cell govuk-table__cell--numeric">£1,717</td>
     </tr>
 	     <tr class="govuk-table__row">
       <th class="govuk-table__header govuk-body-l" scope="row">Total
@@ -93,7 +93,7 @@
                             "pagination-label">Previous return</span><span class=
                             "pagination-part-title">RO5</span></a>
                         </li>
-                        <li class="next">
+                        <li class="next visually-hidden">
                             <a href="#" rel="next" title=
                             "Navigate to next page"><span class=
                             "pagination-label">Next return</span><span class=
