--- a/app/views/9-0-0/return-period.html
+++ b/app/views/9-0-0/return-period.html
@@ -89,7 +89,7 @@
                     <ul class="list">
                         <li class="previous">
                             <a href="#" rel="prev" title=
-                            "Navigate to previous page"><span class=
+                            "Navigate to previous return"><span class=
                             "pagination-label">Previous return</span><span class=
                             "pagination-part-title">RO5</span></a>
                         </li>
