--- a/app/views/9-0-0/ilr_data_submitted.html
+++ b/app/views/9-0-0/ilr_data_submitted.html
@@ -27,8 +27,8 @@
 <h3 class="govuk-heading-m">What happens next?</h3>
 		<p>We’ve sent an email to joe.smith@college.ac.uk to confirm we’ve received your file.</p>
 		<p>We will email you again to let you know when your funding breakdown for R06 and related reports are ready to view. This usually takes about 30 minutes.</p>
-		<p><a href="./return-period.html">View return reports</a>.</p>
-		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a>.</p>
+		<p><a href="./return-period.html">View return reports</a></p>
+		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a></p>
     </div>
 	  <div class="govuk-grid-column-one-third">
         {% include "./includes/sidebar_help.html" %}
