--- a/app/views/9-0-0/no_problems_found.html
+++ b/app/views/9-0-0/no_problems_found.html
@@ -18,9 +18,9 @@
 
 		<p><span class="govuk-!-font-weight-bold">Total warnings</span> = 0</p>
 
-		<p><a href="#">Download summary report </a> (PDF, 375KB).
+		<p><a href="#">Download summary report </a> (PDF, 375KB)
 </p>
-		<p><a href="#">Download the ILR rule violation summary report </a> (CSV, 78KB).
+		<p><a href="#">Download the ILR rule violation summary report </a> (CSV, 78KB)
 </p>
 
 		<a href="./ilr_data_submitted.html" type="submit" class="govuk-button">
