--- a/app/views/9-0-0/theres_a_problem.html
+++ b/app/views/9-0-0/theres_a_problem.html
@@ -32,9 +32,9 @@
 
 		<p><span class="govuk-!-font-weight-bold">Total warnings</span> = 2,291 (affecting 1,027 learners) <a href="#">Find out more</a></p>
 
-		<p><a href="#">Download summary report </a> (PDF, 375KB).
+		<p><a href="#">Download summary report </a> (PDF, 375KB)
 </p>
-		<p><a href="#">Download the ILR rule violation summary report </a> (CSV, 78KB).
+		<p><a href="#">Download the ILR rule violation summary report </a> (CSV, 78KB)
 </p>
 		
 		<a href="./ilr_data_submitted.html" type="submit" class="govuk-button">
