Iteration changes, first commit

--- a/app/views/9-1-0/start.html
+++ b/app/views/9-1-0/start.html
@@ -19,8 +19,8 @@
 		<p>Use this service to validate and submit:</p>
 		<ul class="govuk-list govuk-list--bullet">
 			<li>Individualised learner records (ILR)</li> 
-			<li>Earnings Adjustment statements (EAS)</li> 
-			<li>European Social Fund (ESF) supplementary data</li>
+			<li>Earnings adjustment statements (EAS)</li> 
+			<li>ESFA supplementary data - including ESF (European Social Fund)</li>
 			<li>Funding claims</li>
 		</ul>
 
