--- a/app/views/9-1-0/what_data_do_you_want_to_submit_error.html
+++ b/app/views/9-1-0/what_data_do_you_want_to_submit_error.html
@@ -52,7 +52,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf" disabled>
         <label class="govuk-label govuk-radios__label" for="what-to-submit-3">
-       ESF (European Social Fund) supplementary data
+       ESFA supplementary data - including ESF (European Social Fund)
       </label>
       </div>
 		 <div class="govuk-radios__item">
