--- a/app/views/9-1-0/ilr_data_submitted.html
+++ b/app/views/9-1-0/ilr_data_submitted.html
@@ -20,14 +20,26 @@
           </div>
         </div>		
 <p>File: <span class="govuk-!-font-weight-bold">ILR-file-submission-March-2018.xml</span></p>
-		<p>File name: <span class="govuk-!-font-weight-bold">March Final Update</span></p>
 <p>Submitted by: <span class="govuk-!-font-weight-bold">Norma Jones</span></p>
 <p>At: <span class="govuk-!-font-weight-bold">3:13pm on Wednesday 4 July 2018</span></p> 
 
 <h3 class="govuk-heading-m">What happens next?</h3>
 		<p>We’ve sent an email to joe.smith@college.ac.uk to confirm we’ve received your file.</p>
 		<p>We will email you again to let you know when your funding breakdown for R06 and related reports are ready to view. This usually takes about 30 minutes.</p>
-		<p><a href="./return-period.html">View return reports</a></p>
+
+    <details class="govuk-details">
+      <summary class="govuk-details__summary">
+        <span class="govuk-details__summary-text">
+          Help with email
+        </span>
+      </summary>
+      <div class="govuk-details__text">
+        <p>If your email address is wrong, you will need to log in to IdAMS to update it.</p>
+        <p>If you haven't received an email, check the R06 reports area as your reports may still have been generated.</p>
+      </div>
+    </details>
+
+		<p><a href="./return-period.html">View reports page</a></p>
 		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a></p>
     </div>
 	  <div class="govuk-grid-column-one-third">
