--- a/app/views/9-1-0/includes/sidebar_start.html
+++ b/app/views/9-1-0/includes/sidebar_start.html
@@ -17,7 +17,12 @@
                 <a href="https://www.gov.uk/guidance/how-to-become-an-approved-training-provider-and-bid-for-funding">
                   How to become an approved training provider 
                 </a>
-              </li>             
+              </li>
+              <li>
+                <a href="#">
+                  Timetable of submission deadlines
+                </a>
+              </li>                          
             </ul>
           </nav>
         </aside>
