July 23 ESFA supp journey mods

--- a/app/views/9-1-0/choose_file_to_upload_error_2.html
+++ b/app/views/9-1-0/choose_file_to_upload_error_2.html
@@ -27,7 +27,8 @@
 
 		<p>Before uploading your file you should make sure that:</p>
 		<ul class="govuk-list govuk-list--bullet">
-      <li>it’s in an XML or Zip format</li>
+      <li>it’s in a CSV format</li>
+      <li>It’s using the <a href="#">ESF non-ILR data return template</a></li>
 			<li>the data it contains is as complete as possible</li>
 			<li>the data it contains is as accurate as possible</li>
 		</ul>
