--- a/app/views/9-1-0/choose_file_to_upload_ESFA.html
+++ b/app/views/9-1-0/choose_file_to_upload_ESFA.html
@@ -13,7 +13,8 @@
 	  <h1 class="govuk-heading-xl">Choose file to upload <span class="govuk-caption-xl">Return Period 6 (R06)</span></h1>
 		<p>Before uploading your file you should make sure that:</p>
 		<ul class="govuk-list govuk-list--bullet">
-      <li>it’s in an XML or Zip format</li>
+      <li>it’s in a CSV format</li>
+      <li>It’s using the <a href="#">ESF non-ILR data return template</a></li>
 			<li>the data it contains is as complete as possible</li>
 			<li>the data it contains is as accurate as possible</li>
 		</ul>
@@ -24,7 +25,7 @@
       <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
     </div>
 	
-		<a href="your_files_uploading.html" type="submit" class="govuk-button">
+		<a href="your_files_uploading_ESFA.html" type="submit" class="govuk-button">
       Upload file
     </a>
   </div>
