--- a/app/views/9-1-0/what_data_do_you_want_to_submit.html
+++ b/app/views/9-1-0/what_data_do_you_want_to_submit.html
@@ -11,7 +11,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 		
-		<form action="./choose_file_to_upload.html" method="get" class="form">
+		<form action="choose_file_to_upload" method="get" class="form">
 			<div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
@@ -47,7 +47,7 @@
     </div>	 
   </fieldset>	 
 			</div>
-<button type="submit" class="govuk-button">
+<button class="govuk-button">
   Continue
 </button>
 			
