--- a/app/views/9-1-0/your_files_uploading_ESFA.html
+++ b/app/views/9-1-0/your_files_uploading_ESFA.html
@@ -15,7 +15,7 @@
     Your file’s uploading
   </h2>
   <div class="govuk-highlight-summary__body">
-	  <p>ILR-file-submission-March-2018.xml</p>
+	  <p>ESF-file-submission-Marj-2018.csv</p>
 	  <p>22% uploaded</p>
    <p><progress value="22" max="100"></progress></p>
 	  <p><a href="#">Cancel</a></p>
