--- a/app/views/9-1-0/ilr_data_submitted_ESFA.html
+++ b/app/views/9-1-0/ilr_data_submitted_ESFA.html
@@ -12,20 +12,20 @@
     <div class="govuk-grid-column-two-thirds">
 		<div class="govuk-panel govuk-panel--confirmation">
           <h2 class="govuk-panel__title">
-            R06 ILR file submitted
+            R06 supplementary data file submitted
           </h2>
           <div class="govuk-panel__body">
 			  Reference: 123456789
            
           </div>
         </div>		
-<p>File: <span class="govuk-!-font-weight-bold">ILR-file-submission-March-2018.xml</span></p>
+<p>File: <span class="govuk-!-font-weight-bold">ESF-file-submission-March-2018.csv</span></p>
 <p>Submitted by: <span class="govuk-!-font-weight-bold">Norma Jones</span></p>
 <p>At: <span class="govuk-!-font-weight-bold">3:13pm on Wednesday 4 July 2018</span></p> 
 
 <h3 class="govuk-heading-m">What happens next?</h3>
 		<p>We’ve sent an email to joe.smith@college.ac.uk to confirm we’ve received your file.</p>
-		<p>We will email you again to let you know when your funding breakdown for R06 and related reports are ready to view. This usually takes about 30 minutes.</p>
+		<p>We will email you again to let you know when your rule violation, funding and other reports are ready to view. This usually takes about 30 minutes.</p>
 
     <details class="govuk-details">
       <summary class="govuk-details__summary">
@@ -39,7 +39,7 @@
       </div>
     </details>
 
-		<p><a href="./return-period.html">View reports page</a></p>
+		<p><a href="#">View reports page</a></p>
 		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a></p>
     </div>
 	  <div class="govuk-grid-column-one-third">
