--- a/app/views/9-1-0/includes/sidebar_help_related_ESFA.html
+++ b/app/views/9-1-0/includes/sidebar_help_related_ESFA.html
@@ -15,19 +15,14 @@
             <ul class="govuk-list govuk-!-font-size-16">
               <li>
                 <a href="https://www.gov.uk/government/publications/ilr-guides-and-templates-for-2017-to-2018">
-                  ILR provider support manual - guide to making ILR returns  
+                  Provider support manual for 2016 to 2017  
                 </a>
               </li> 
-				<li>
-                <a href="https://www.gov.uk/education/data-collection-for-further-education-providers">
-                  ILR specification, validation and funding rules  
+				      <li>
+                <a href="https://www.gov.uk/government/publications/sfa-supplementary-data-collection">
+                  ESFA: supplementary data collection guidance  
                 </a>
               </li>
-				<li>
-                <a href="https://www.gov.uk/government/publications/ilr-data-check-that-it-meets-standards-and-quality-requirements">
-                  ILR data: check that it meets standards and quality requirements 
-                </a>
-              </li>  
             </ul>
           </nav>
         </aside>
