--- a/app/views/9-1-0/your_files_uploading_ESFA.html
+++ b/app/views/9-1-0/your_files_uploading_ESFA.html
@@ -23,7 +23,7 @@
 </div>
 		
 
-		<a href="./theres_a_problem.html" type="submit" class="govuk-button">
+		<a href="./theres_a_problem_ESFA.html" type="submit" class="govuk-button">
   Continue
 </a>
 
