Remove theres a problem for ESFA journey

--- a/app/views/9-1-0/ilr_data_submitted_ESFA.html
+++ b/app/views/9-1-0/ilr_data_submitted_ESFA.html
@@ -1,6 +1,9 @@
 
 {% extends "layout.html" %}
 
+{% block beforeContent %}
+  {% include "./includes/back_choose_file_to_upload_ESFA.html" %}
+{% endblock %}
 
 {% block pageTitle %}
   Data Collections Transformation Prototype
