--- a/app/views/9-1-0/theres_a_problem.html
+++ b/app/views/9-1-0/theres_a_problem.html
@@ -18,11 +18,11 @@
 
 		<p id="error"><span class="govuk-!-font-weight-bold">Total learners in file</span>: 3,893</p>
 
-		<p><span class="govuk-!-font-weight-bold">Total errors</span>: 0 (affecting 0 learners) <a href="#">Find out more</a></p>
+		<p><span class="govuk-!-font-weight-bold">Total errors</span>: 0 (affecting 0 learners) <!--<a href="#">Find out more</a>--></p>
 
-		<p><span class="govuk-!-font-weight-bold">Total warnings</span>: 2,291 (affecting 1,027 learners) <a href="#">Find out more</a></p>
+		<p><span class="govuk-!-font-weight-bold">Total warnings</span>: 2,291 (affecting 1,027 learners) <!--<a href="#">Find out more</a>--></p>
 
-		<p><a href="#">Download summary report </a> (PDF, 375KB)</p>
+		<!--<p><a href="#">Download summary report </a> (PDF, 375KB)</p>-->
 		<p><a href="#">Download detailed report </a> (CSV, 78KB) showing all errors and warnings</p>
 		
 		<a href="./ilr_data_submitted.html" type="submit" class="govuk-button">
