--- a/app/views/9-1-0/esf_choose_file_to_upload.html
+++ b/app/views/9-1-0/esf_choose_file_to_upload.html
@@ -13,6 +13,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds"> 
+    <form action="your_files_uploading" method="get" class="form">
 	  <h1 class="govuk-heading-xl">Choose file to upload <span class="govuk-caption-xl">Return Period 6 (R06)</span></h1>
 		<p>Before uploading your file you should make sure that:</p>
 		<ul class="govuk-list govuk-list--bullet">
@@ -26,11 +27,13 @@
         Upload a file
       </label>
       <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
+      <input type="hidden" name="whattosubmit" value="{{ data['whattosubmit'] }}">
     </div>
-	
-		<a href="your_files_uploading_ESFA.html" type="submit" class="govuk-button">
+
+	  <button class="govuk-button">
       Upload file
-    </a>
+    </button>
+  </form>
   </div>
 
   <div class="govuk-grid-column-one-third">
