--- a/app/views/9-1-0/esf_data_submitted.html
+++ b/app/views/9-1-0/esf_data_submitted.html
@@ -42,7 +42,7 @@
       </div>
     </details>
 
-		<p><a href="#">View reports page</a></p>
+		<p><a href="./return-period.html">View reports page</a></p>
 		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a></p>
     </div>
 	  <div class="govuk-grid-column-one-third">
