--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,17 +27,28 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
-	   <tr class="govuk-table__row">
+	  <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">9.2.0</th>
+    		<td class="govuk-table__cell ">
+          <ul class="govuk-list govuk-list--bullet">
+    			  <p>We:</p>
+            <li>updated the content</li>
+          </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="9-1-0/contents.html">Contents</a></td>
+		    <td class="govuk-table__cell "><a href="./9-1-0/start.html">Start now</a></td>
+    </tr>
+    <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.1.0</th>
-		<td class="govuk-table__cell "><ul class="govuk-list govuk-list--bullet">
-			<p>We:</p>
-  <li>updated the content</li>
-  <li>added EAS and ESF flow</li>  
-</ul></td>
-      <td class="govuk-table__cell "><a href="9-1-0/contents.html">Contents</a></td>
-		 <td class="govuk-table__cell "><a href="./9-1-0/start.html">
-  Start now
-</a></td>
+        <td class="govuk-table__cell ">
+          <ul class="govuk-list govuk-list--bullet">
+            <p>We:</p>
+            <li>updated the content</li>
+            <li>added EAS and ESF flow</li>  
+          </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="9-1-0/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-1-0/start.html">Start now</a></td>
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.0.0</th>
