--- a/app/views/9-2-0/esf_choose_file_to_upload.html
+++ b/app/views/9-2-0/esf_choose_file_to_upload.html
@@ -14,11 +14,11 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds"> 
     <form action="your_files_uploading" method="get" class="form">
-	  <h1 class="govuk-heading-xl">Choose file to upload <span class="govuk-caption-xl">Return Period 6 (R06)</span></h1>
+	  <h1 class="govuk-heading-xl">Choose file to upload <span class="govuk-caption-xl">Return Period 12 (R12)</span></h1>
 		<p>Before uploading your file you should make sure that:</p>
 		<ul class="govuk-list govuk-list--bullet">
       <li>it’s in a CSV format</li>
-      <li>It’s using the <a href="#">ESF non-ILR data return template</a></li>
+      <li>it’s using the <a href="#">ESF non-ILR data return template</a></li>
 			<li>the data it contains is as complete as possible</li>
 			<li>the data it contains is as accurate as possible</li>
 		</ul>
