--- a/app/views/9-2-0/what_data_do_you_want_to_submit.html
+++ b/app/views/9-2-0/what_data_do_you_want_to_submit.html
@@ -35,16 +35,9 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-3">
-        ESFA supplementary data - including ESF (European Social Fund)
+        ESF (European Social Fund) supplementary data
       </label>
       </div>
-		 <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-4" name="whattosubmit" type="radio" value="fc" disabled>
-        <label class="govuk-label govuk-radios__label" for="what-to-submit-4">
-        Funding claim
-        </label>
-      </div>
-    </div>	 
   </fieldset>	 
 			</div>
 <button class="govuk-button">
