--- a/app/views/index.html
+++ b/app/views/index.html
@@ -33,10 +33,11 @@
           <ul class="govuk-list govuk-list--bullet">
     			  <p>We:</p>
             <li>updated the content</li>
+            <p>(inc. addition of error summary<br>& warning to the 'There's a problem'<br>page)</p>
           </ul>
         </td>
-        <td class="govuk-table__cell "><a href="9-1-0/contents.html">Contents</a></td>
-		    <td class="govuk-table__cell "><a href="./9-1-0/start.html">Start now</a></td>
+        <td class="govuk-table__cell "><a href="9-2-0/contents.html">Contents</a></td>
+		    <td class="govuk-table__cell "><a href="./9-2-0/start.html">Start now</a></td>
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.1.0</th>
