--- a/app/views/9-2-0/ilr_data_submitted.html
+++ b/app/views/9-2-0/ilr_data_submitted.html
@@ -12,30 +12,30 @@
     <div class="govuk-grid-column-two-thirds">
 		<div class="govuk-panel govuk-panel--confirmation">
           <h2 class="govuk-panel__title">
-            R06 ILR file submitted
+            R12 ILR file submitted
           </h2>
           <div class="govuk-panel__body">
 			  Reference: 123456789
            
           </div>
         </div>		
-<p>File: <span class="govuk-!-font-weight-bold">ILR-file-submission-March-2018.xml</span></p>
-<p>Submitted by: <span class="govuk-!-font-weight-bold">Norma Jones</span></p>
-<p>At: <span class="govuk-!-font-weight-bold">3:13pm on Wednesday 4 July 2018</span></p> 
+<p>File: <span class="govuk-!-font-weight-bold">ILR-12345678-1819-20180806-151209-02.XML</span></p>
+<p>Submitted by: <span class="govuk-!-font-weight-bold">Sam Smith</span></p>
+<p>At: <span class="govuk-!-font-weight-bold">3:17pm on Wednesday 6 August 2018</span></p> 
 
 <h3 class="govuk-heading-m">What happens next?</h3>
-		<p>We’ve sent an email to joe.smith@college.ac.uk to confirm we’ve received your file.</p>
-		<p>We will email you again to let you know when your funding breakdown for R06 and related reports are ready to view. This usually takes about 30 minutes.</p>
+		<p>We’ve sent an email to sam.smith@college.ac.uk to confirm we’ve received your file.</p>
+		<p>We will email you again to let you know when your funding breakdown for R12 and related reports are ready to view. This usually takes about 30 minutes.</p>
 
     <details class="govuk-details">
       <summary class="govuk-details__summary">
         <span class="govuk-details__summary-text">
-          Help with email
+          Wrong email address or email not arrived
         </span>
       </summary>
       <div class="govuk-details__text">
-        <p>If your email address is wrong, you will need to log in to IdAMS to update it.</p>
-        <p>If you haven't received an email, check the R06 reports area as your reports may still have been generated.</p>
+        <p>If your email address is wrong, you will need to <a href="#">update it in your IdAMS account</a>.</p>
+        <p>If you haven't received an email, it may be in your junkmail folder. <a href="#">Check the R12 reports area</a> as your reports may still have been generated.</p>
       </div>
     </details>
 
