--- a/app/views/9-2-0/start.html
+++ b/app/views/9-2-0/start.html
@@ -20,8 +20,7 @@
 		<ul class="govuk-list govuk-list--bullet">
 			<li>Individualised learner records (ILR)</li> 
 			<li>Earnings adjustment statements (EAS)</li> 
-			<li>ESFA supplementary data - including ESF (European Social Fund)</li>
-			<li>Funding claims</li>
+			<li>ESF (European Social Fund) supplementary data</li>
 		</ul>
 
 		<p>You can also view and download reports for data you’ve submitted.</p>
@@ -32,9 +31,10 @@
 
 		<p>You will need:</p>
 		<ul class="govuk-list govuk-list--bullet">
-			<li>Your IdAMS (Information Management Services system) login details</li>
-			<li>If you’re submitting ILR or EAS data, an XML or Zip file to upload</li>
-			</ul>      
+			<li>your IdAMS (Information Management Services system) login details</li>
+			<li>an XML or Zip file to upload - for ILR data</li>
+			<li>a CSV file to upload - for ESF data</li>
+		</ul>      
     </div>
 	  <div class="govuk-grid-column-one-third">
         {% include "./includes/sidebar_start.html" %}
