Updated menu and extended routing to cover multiple iterations from 9-1-5

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,9 +31,8 @@
       <th class="govuk-table__header" scope="row">9.2.5</th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
-            <p>We:</p>
-            <li>updated the content</li>
-            <p>(inc. addition of error summary<br>& warning to the 'There's a problem'<br>page)</p>
+            <p></p>
+            <p>Stopped version based on 9-2-0</p>
           </ul>
         </td>
         <td class="govuk-table__cell "><a href="9-2-5/contents.html">Contents</a></td>
@@ -55,9 +54,8 @@
       <th class="govuk-table__header" scope="row">9.1.5</th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
-            <p>We:</p>
-            <li>updated the content</li>
-            <li>added EAS and ESF flow</li>  
+            <p></p>
+            <p>Stopped version based on 9-1-0</p>
           </ul>
         </td>
         <td class="govuk-table__cell "><a href="9-1-5/contents.html">Contents</a></td>
