--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,11 +32,11 @@
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
             <p></p>
-            <p>Based on stopped version 9-2-5, includes EAS screenshots</p>
+            <p>As 9-2-5 + EAS screenshots</p>
           </ul>
         </td>
-        <td class="govuk-table__cell "><a href="9-2-5/contents.html">Contents</a></td>
-        <td class="govuk-table__cell "><a href="./9-2-5/start.html">Start now</a></td>
+        <td class="govuk-table__cell "><a href="9-3-0/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-3-0/start.html">Start now</a></td>
     </tr>
      <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.2.5</th>
