--- a/app/views/9-3-0/contents.html
+++ b/app/views/9-3-0/contents.html
@@ -12,7 +12,7 @@
     <div class="govuk-grid-column-two-thirds">
 		
       	<h1 class="govuk-heading-xl">
-        	Contents <span class="govuk-caption-xl">Version 9.25</span>       
+        	Contents <span class="govuk-caption-xl">Version 9.3</span>       
       	</h1>
       	<p>
         	Please do not enter any personal information. This prototype is not secure.
@@ -34,10 +34,19 @@
 
 
 		<h2 class="govuk-heading-l">EAS</h2>
-		
-		<ul class="govuk-list govuk-list--number">	
-			<li><a href="#">What data do you want to submit? (error state)</a></li>
-		</ul>
+
+		<form id="myForm" action="screenshotview" method="get" class="form">
+			<input type="hidden" name="number" value="" id="number" />
+			<div class="govuk-form-group">
+				<ul class="govuk-list govuk-list--number">
+					<li><a href="#" onclick="document.getElementById('number').value = 1; document.getElementById('myForm').submit()">Manage EAS</a></li>
+					<li><a href="#" onclick="document.getElementById('number').value = 2; document.getElementById('myForm').submit()">Choose programme</a></li>
+					<li><a href="#" onclick="document.getElementById('number').value = 3; document.getElementById('myForm').submit()">Add claim details</a></li>
+					<li><a href="#" onclick="document.getElementById('number').value = 4; document.getElementById('myForm').submit()">Add claim details - complete</a></li>
+					<li><a href="#" onclick="document.getElementById('number').value = 5; document.getElementById('myForm').submit()">Manage EAS - updated</a></li>
+				</ul>
+			</div>
+		</form>
 
 		<h2 class="govuk-heading-l">Error states and fails</h2>
 		
