Enable ESF button leaving ESA disabled

--- a/app/views/9-3-0/what_data_do_you_want_to_submit.html
+++ b/app/views/9-3-0/what_data_do_you_want_to_submit.html
@@ -33,7 +33,7 @@
       </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf" onclick="this.blur(); document.getElementById('what-to-submit-1').click()">
+        <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-3">
         ESF (European Social Fund) supplementary data
       </label>
