--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,8 +31,9 @@
       <th class="govuk-table__header" scope="row">9.3.0</th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
-            <p></p>
-            <p>As 9-2-5 + EAS screenshots</p>
+            <p>We:</p>
+            <li>added EAS screenshots</li>
+            <li>enabled the ESF journey</li>
           </ul>
         </td>
         <td class="govuk-table__cell "><a href="9-3-0/contents.html">Contents</a></td>
