Correction to contents page

--- a/app/views/9-3-0/contents.html
+++ b/app/views/9-3-0/contents.html
@@ -48,6 +48,18 @@
 			</div>
 		</form>
 
+		<h2 class="govuk-heading-l">ESF User Journey (Happy Path)</h2>
+		
+		<ul class="govuk-list govuk-list--number">
+			<li><a href="start.html">Start page</a></li>
+		  	<li><a href="idams.html">IDAMS</a></li>
+		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
+			<li><a href="esf_choose_file_to_upload.html">Choose file to upload</a></li>
+			<li><a href="your_files_uploading.html">Your file's uploading (wip)</a></li>
+			<li><a href="esf_data_submitted.html">ESF data submitted</a></li>
+			<li><a href="return-period.html">Return period</a></li>
+		</ul>
+
 		<h2 class="govuk-heading-l">Error states and fails</h2>
 		
 		<ul class="govuk-list govuk-list--number">	
