--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,7 +27,19 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
-     <tr class="govuk-table__row">
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">9.3.2</th>
+        <td class="govuk-table__cell ">
+          <ul class="govuk-list govuk-list--bullet">
+            <p>We:</p>
+            <li>enhanced the EAS journey</li>
+            <li>EAS add/change now in table format</li>
+          </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="9-3-2/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-3-2/start.html">Start now</a></td>
+    </tr>
+    <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.1</th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
@@ -38,7 +50,7 @@
         <td class="govuk-table__cell "><a href="9-3-1/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="./9-3-1/start.html">Start now</a></td>
     </tr>
-     <tr class="govuk-table__row">
+    <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.0</th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
