--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -293,3 +293,27 @@ progress::-webkit-progress-bar {background:white;}
 
 progress::-moz-progress-bar { background: white; }
 
+
+/**Liz**/
+
+.account-info {
+    padding-left: 0;
+    text-align: right;
+    font-size: 14px;
+    line-height: 1.1428571429;
+    padding: 1em 0 0 0;
+    /*border-bottom: 1px solid #bfc1c3;*/
+}
+
+@media (min-width: 641px) {
+    .account-info {
+        font-size: 16px;
+        line-height: 1.25;
+    }
+}
+
+.account-info .your-name {
+    padding: 0 .5em;
+}
+
+
