--- a/app/views/KitKat-9-4-0/layout_idams.html
+++ b/app/views/KitKat-9-4-0/layout_idams.html
@@ -49,6 +49,7 @@
   html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
 }) }}
 
+<a href="#" onclick="goBack()" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% if useAutoStoreData %}
@@ -67,7 +68,7 @@
 {% endif %}
 
 {% block bodyEnd %}
-
+{% include "./includes/version.html" %}
   {% block scripts %}
     {% include "includes/scripts.html" %}
     {% block pageScripts %}{% endblock %}
